<resources>
    <string name="app_name">Pccoe
    Students</string>
    <string name="todo">todo</string>
    <string name="search">Search</string>
    <string name="day">Day</string>
    <string name="batch">Batch</string>
    <string name="division">Division</string>
    <string name="profile">Profile</string>
    <string name="timetable">TimeTable</string>
    <string name="logout">Logout</string>
    <string name="weekly_timetable">Weekly TimeTable</string>
    <string name="feedback">Feedback</string>
    <string name="about">About</string>
    <string name="notice">Notice</string>
    <string name="name">Name:</string>
    <string name="email">Email:</string>
    <string name="roll_no">Roll No:</string>
    <string name="prn">PRN:</string>
    <string name="time_table">Time Table :</string>
    <string name="lectures">Lectures</string>
    <string name="time">Time</string>
    <string name="branch">Branch</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>